[metadata]
name = py-healthcheck
version = 0.1.0
author = Peyman Sohi
author_email = peymantahmasebi10@gmail.com
description = A comprehensive health check library for Python applications and microservices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/py-healthcheck/py-healthcheck
project_urls =
    Homepage = https://github.com/py-healthcheck/py-healthcheck
    Documentation = https://py-healthcheck.readthedocs.io
    Repository = https://github.com/py-healthcheck/py-healthcheck.git
    Bug Tracker = https://github.com/py-healthcheck/py-healthcheck/issues
    Changelog = https://github.com/py-healthcheck/py-healthcheck/blob/main/CHANGELOG.md
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Monitoring
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Database
keywords = health healthcheck monitoring microservices flask fastapi django
python_requires = >=3.8

[options]
packages = find:
package_dir =
    = .
include_package_data = True
zip_safe = False
install_requires =
    click>=8.0.0
    httpx>=0.24.0

[options.packages.find]
where = .
include = py_healthcheck*

[options.package_data]
py_healthcheck = py.typed

[options.extras_require]
# Database drivers
postgres =
    psycopg2-binary>=2.9.0
    asyncpg>=0.28.0
mysql =
    pymysql>=1.0.0
    aiomysql>=0.2.0
redis =
    redis>=4.5.0
    aioredis>=2.0.0
mongodb =
    pymongo>=4.0.0
    motor>=3.0.0
elasticsearch =
    elasticsearch>=8.0.0
http =
    requests>=2.28.0

# Framework integrations
flask =
    flask>=2.0.0
fastapi =
    fastapi>=0.100.0
django =
    django>=3.2.0

# CLI enhancements
cli =
    rich>=13.0.0

# Development dependencies
dev =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0

# All optional dependencies
all =
    py-healthcheck[postgres,mysql,redis,mongodb,elasticsearch,http,flask,fastapi,django,cli,dev]

[options.entry_points]
console_scripts =
    py-healthcheck = py_healthcheck.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    .venv,
    .eggs,
    *.egg,
    build,
    dist

[coverage:run]
source = py_healthcheck
omit =
    */tests/*
    */test_*
    */__pycache__/*
    */migrations/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod
